--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "sort-by": "^1.2.0"
   },
