--- a/package.json
+++ b/package.json
@@ -10,21 +10,28 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
+    "aos": "^2.3.4",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
+    "lottie-react": "^2.4.0",
     "match-sorter": "^8.0.0",
     "react": "^18.3.1",
+    "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
+    "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
     "react-slider": "^2.0.6",
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5"
   },
