--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-awesome-reveal": "^4.2.14",
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
+    "react-helmet": "^6.1.0",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-simple-typewriter": "^5.0.1",
