--- a/src/.env
+++ b/src/.env
@@ -1,6 +1,7 @@
-API_KEY=AIzaSyB6MduW-O2p1U1p74_WQIm39NohNZQGWUY
-AUTH_DOMAIN=coffee-store-auth-1a9a6.firebaseapp.com
-ProjectId=coffee-store-auth-1a9a6
-StorageBucket=coffee-store-auth-1a9a6.firebasestorage.app
-MessagingSenderId=933384736212
-AppId=1:933384736212:web:dcce3a7499093f09de5a41
+
+REACT_APP_API_KEY="AIzaSyB6MduW-O2p1U1p74_WQIm39NohNZQGWUY"
+REACT_APP_AUTH_DOMAIN="coffee-store-auth-1a9a6.firebaseapp.com"
+REACT_APP_PROJECT_ID="coffee-store-auth-1a9a6"
+REACT_APP_STORAGE_BUCKET="coffee-store-auth-1a9a6.firebasestorage.app"
+REACT_APP_MESSAGING_SENDER_ID="933384736212"
+REACT_APP_APP_ID="1:933384736212:web:dcce3a7499093f09de5a41"
