--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
     "axios": "^1.7.9",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -34,7 +32,8 @@
     "react-tooltip": "^5.28.0",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
-    "sweetalert2": "^11.14.5"
+    "sweetalert2": "^11.14.5",
+    "webpack": "^5.97.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
@@ -49,6 +48,7 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.12.0",
     "postcss": "^8.4.49",
+    "process": "^0.11.10",
     "tailwindcss": "^3.4.16",
     "vite": "^6.0.1"
   }
