--- a/firebase.json
+++ b/firebase.json
@@ -1,10 +1,18 @@
 {
   "hosting": {
-    "public": "dist",
+    "site": "coffee-store-auth-1a9a6",
+    "public": "dist", 
     "ignore": [
       "firebase.json",
       "**/.*",
       "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html"
+      }
     ]
   }
 }
+
