--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "animate.css": "^4.1.1",
     "aos": "^2.3.4",
-    "axios": "^1.7.9",
+    "axios": "^1.9.0",
     "firebase": "^11.0.2",
     "localforage": "^1.10.0",
     "lottie-react": "^2.4.0",
@@ -22,7 +22,7 @@
     "react-dom": "^18.3.1",
     "react-fast-marquee": "^1.6.5",
     "react-helmet": "^6.1.0",
-    "react-icons": "^5.4.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.0.2",
     "react-simple-typewriter": "^5.0.1",
     "react-slick": "^0.30.2",
@@ -30,6 +30,7 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^10.0.6",
     "react-tooltip": "^5.28.0",
+    "reacticon": "^0.0.1",
     "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.14.5",
